compiler/compiler/tests/language/negative/oopSurfaceRoleCapability/associated/missingAssociatedType.qn
extend HttpCtx<...Caps> : pub HttpAssociatedSpec<HttpCtx<...Caps>> {
  type Error = IntoHttpError
  const requiresAuth: bool = true
}
